# fastsense

./: .astylerc  .gitignore  .gitmodules  Doxygen.config  Makefile  Makefile.local  README.md  build.cfg  connectivity.cfg  copy_to_remote.tcl  link.cfg  link_test.cfg  loopClosure.md  package.cfg  package_test.cfg  postSysLink.tcl  tb_krnl_tsdf.cpp
app_data/: config.json
presentation/: bib.bib  presentation.tex  vorgehen.xml
presentation/images/: Pose_Graph.drawio  Reg_Gradient.drawio  TSDF_Diagrams.drawio  vorgehen.xml
ros/: bridge.rviz  demo.rviz
ros/src/bridge/: CMakeLists.txt  package.xml
ros/src/bridge/include/bridge/: bridge_base.h  imu_bridge.h  transform_bridge.h  tsdf_bridge.h  util.h  velodyne_bridge.h
ros/src/bridge/include/bridge/from_trenz/: bridge_base.h  imu_bridge.h  lidar_bridge.h  point.h  transform_bridge.h  tsdf_bridge.h  velodyne_bridge.h
ros/src/bridge/launch/: bag_player.launch  bridge.launch  bridge_recorder.launch  interpolated_loam_player.launch  loam_player.launch  mit_player.launch  rviz.launch  rviz_decay.launch  sim_bridge.launch  sim_bridge_recorder.launch
ros/src/bridge/scripts/: sync_time.sh
ros/src/bridge/src/: bridge.cpp  imu_bridge.cpp  tf_reset.cpp  transform_bridge.cpp  tsdf_bridge.cpp  velodyne_bridge.cpp
ros/src/bridge/src/from_trenz/: CMakeLists.txt  bridge.cpp  imu_bridge.cpp  lidar_bridge.cpp  transform_bridge.cpp  tsdf_bridge.cpp  velodyne_bridge.cpp
ros/src/bridge/src/kitti_to_ros/: kitti_to_ros.cpp
ros/src/bridge/src/pose_vis/: pose_vis.cpp
ros/src/bridge/src/test/: CMakeLists.txt  receiver.cpp  sender.cpp
ros/src/bridge/src/to_trenz/: CMakeLists.txt  bridge.cpp
ros/src/bridge/test/: test.cpp  test.launch
ros/src/evaluation/evaluation/: CMakeLists.txt  package.xml
ros/src/evaluation/evaluation/config/: loamvsfastsense.rviz
ros/src/evaluation/evaluation/launch/: fastsensevsloam.launch  interpolated_loamvsfastsense.launch  loamvsfastsense.launch  save_poses.launch
ros/src/evaluation/evaluation/src/: interpolate_imu.cpp  live_interpolate_imu.cpp  loam_pcl_to_pose.cpp  loam_to_pose_node.cpp  pcl2pcl2.cpp  reduce_pcl.cpp  save_poses_node.cpp
ros/src/mesh_reconstructor/: CMakeLists.txt
ros/src/mesh_reconstructor/src/: mesh_reconstructor.cpp
scripts/: test_before_push.sh
scripts/install/: cppzmq.h  cppzmq.sh
src/: Application.cpp  Application.h  Makefile  application.cpp  application.h  krnl_main.cpp  main.cpp  recorder.cpp  vadd.cpp  vadd.h
src/callback/: cloud_callback.cpp  cloud_callback.h  imu_callback.cpp  imu_callback.h  map_thread.cpp  map_thread.h
src/comm/: bridge_messages.h  buffered_imu_receiver.h  buffered_receiver.h  queue_bridge.h  receiver.h  receiver.tcc  sender.h  sender.tcc  zmq_context_manager.h  zmq_patch.h
src/comm/host/src/bridge/: CMakeLists.txt
src/comm/host/src/bridge/src/: tsdf_bridge.cpp
src/data/: sensor_sync.cpp  sensor_sync.h
src/driver/: velodyne.cpp  velodyne.h
src/eval/: RuntimeEvaluator.cpp  RuntimeEvaluator.h  runtime_evaluator.cpp  runtime_evaluator.h
src/example/: example.cpp
src/hw/: fpga_manager.cpp  fpga_manager.h  fpga_program.cpp  fpga_program.h  opencl.h  types.h
src/map/: global_map.cpp  global_map.h  local_map.cpp  local_map.h  local_map.tcc  local_map_hw.h  ring_buffer.h  ring_buffer.tcc
src/msg/: angular_velocity.cpp  angular_velocity.h  imu.cpp  imu.h  imu_msg.cpp  imu_msg.h  linear_acceleration.cpp  linear_acceleration.h  magnetic_field.cpp  magnetic_field.h  msgs_stamped.h  point.h  point_cloud.h  point_cloud_stamped.h  pose.h  quaternion.h  registration_input.h  stamped.h  transform.h  tsdf.h  tsdf_bridge_msg.h  xyz.h  xyz_buffer.h  zmq_converter.h
src/preprocessing/: preprocessing.cpp  preprocessing.h
src/registration/: imu_accumulator.cpp  imu_accumulator.h  krnl_reg.cpp  reg_hw.h  registration.cpp  registration.h  registration_hw.h  registration_test.cpp
src/tsdf/: AverageNormal.h  AverageNormal.tcc  FittingNormalBase.h  IterativeNormal.h  IterativeNormal.tcc  NeighborsBase.h  NormalBase.h  PriorityNeighbors.h  PriorityNeighbors.tcc  ProjectionNormal.h  RANSACNormal.h  RANSACNormal.tcc  ScanOrderNeighbors.h  ScanOrderNeighbors.tcc  TSDFParameters.h  TSDFParameters.tcc  krnl_tsdf.cpp  krnl_tsdf.h  krnl_tsdf_sw.cpp  krnl_tsdf_sw.h  tsdf_hw.h  update_tsdf.cpp  update_tsdf.h  update_tsdf_hw.cpp  update_tsdf_hw.h  weighting.h
src/ui/: button.cpp  button.h  led.cpp  led.h  stdin.h
src/util/: CMakeLists.txt  button_reader.h  concurrent_ring_buffer.h  concurrent_ring_buffer.tcc  constants.h  event_handler_list.h  event_handler_list.tcc  filter.h  hls_functions.h  params.h  point.h  point_cloud.h  point_hw.h  process_thread.cpp  process_thread.h  ring_buffer.h  runner.h  runtime_evaluator.cpp  runtime_evaluator.h  time.h  time_stamp.cpp  time_stamp.h  tsdf.h  tsdf_hw.h  types.h  util  xyz_buffer.h
statemachine/: CMakeLists.txt  app.cpp  app.h  main.cpp  states.cpp  states.h  too_simple.cpp
statemachine/too_complicated/: base_state.h
test/: README.md  buffer_stl.cpp  catch2_config.h  communication.cpp  concurrent_ringbuffer.cpp  config.cpp  eval_median.cpp  global_map.cpp  hdf5.cpp  hw_buffer.cpp  hw_buffers.cpp  imu.cpp  imu_accumulator.cpp  kernel.cpp  kernel_tsdf.cpp  map.cpp  preprocessing.cpp  queue_bridge.cpp  receiver.cpp  registration.cpp  relative_time.cpp  sender.cpp  sensor_sync.cpp  streams.cpp  test.cpp  test_communication.cpp  test_hw_buffer.cpp  test_main.cpp  test_queue_bridge.cpp  time.cpp  tsdf_kernel.cpp  tsdf_kernel_vis.cpp  tsdf_values.cpp  xyz_buffer.cpp  zmq_client.cpp  zmq_server.cpp
test/build-local/: Fastsense_test_sensor_sync.cpp
test/imu/: Makefile  test.cpp
test/imu_test_non_ros/: Makefile  test.cpp
test/kernels/: io_buffer_test_kernel.h  krnl_local_map_test.cpp  krnl_streamin.cpp  (+5 more)
test/ros_tests_ws/src/imu_test/: CMakeLists.txt
test/ros_tests_ws/src/imu_test/src/: imu_test_node.cpp
test/src/imu_test/: CMakeLists.txt
test/src/imu_test/include/ros_test/: concurrent_ring_buffer.h  concurrent_ring_buffer.tcc  point_cloud.h
test/src/imu_test/src/: imu_test_node.cpp
(+109 files in other folders)
